namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-proposal-disposal-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-proposal-disposal-app-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "people-analytics"
    cloud-platform.justice.gov.uk/application: "proposal-disposal-app"
    cloud-platform.justice.gov.uk/owner: "people-analytics: peopleanalytics@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/proposal-disposal-app"
    cloud-platform.justice.gov.uk/team-name: "proposal-disposal-app-admins"
    cloud-platform.justice.gov.uk/review-after: "16-May-24"
